tests/remap/fail/prolog/mcode.hal
# Register the C remap failure handlers (replaces the classic Python remap.py).
load test_remap_fail
